--- a/app/build.gradle
+++ b/app/build.gradle
@@ -125,4 +125,6 @@ dependencies {
     implementation 'com.squareup.okio:okio:1.17.5'
     implementation 'org.jmdns:jmdns:3.5.5'
     implementation 'com.android.volley:volley:1.2.0'
+    compile group: 'org.riversun', name: 'java-promise', version: '1.1.0'
+    implementation 'com.google.guava:guava:30.1.1-android'
 }
