--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -66,12 +66,12 @@
             android:name=".LandingView"
             android:exported="true"
             android:resizeableActivity="true">
-            <!-- <intent-filter>
+            <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
                 <category android:name="android.intent.category.LEANBACK_LAUNCHER" />
                 <category android:name="tv.ouya.intent.category.APP" />
-            </intent-filter>   -->
+            </intent-filter>  
         </activity>
         <activity 
             android:name=".Dashboard"
