--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,44 +1,45 @@
 {
     "version": "0.2.0",
     "configurations": [
+
         {
             // configuration type, request  and name. "launch" is used to deploy the app
             // to your device and start a debugging session.
             "type": "android",
             "request": "launch",
-            "name": "Launch App",
-
-            // Location of the App source files. This value must point to the root of
-            // your App source tree (containing AndroidManifest.xml).
+            "name": "Launch (Landing)",
             "appSrcRoot": "${workspaceRoot}/app/src/main",
-
-            // Fully qualified path to the built APK (Android Application Package).
             "apkFile": "${workspaceRoot}/app/build/outputs/apk/nonRoot/debug/app-nonRoot-debug.apk",
-
-            // Automatically launch 'adb start-server' if not already started.
-            // Default: true
             "autoStartADB": true,
-
-            // Launch behaviour if source files have been saved after the APK was built.
-            // One of: [ ignore warn stop ]. Default: warn
             "staleBuild": "warn",
-
-            // Target Device ID (as indicated by 'adb devices').
-            // Use this to specify which device is used for deployment
-            // when multiple devices are connected.
             "targetDevice": "",
-
-            // Fully qualified path to the AndroidManifest.xml file compiled into the APK.
-            // Default: "${appSrcRoot}/AndroidManifest.xml"
             "manifestFile": "${workspaceRoot}/app/src/main/AndroidManifest.xml",
-
-            // Custom arguments passed to the Android package manager to install the app.
-            // Run 'adb shell pm' to show valid arguments. Default: ["-r"]
             "pmInstallArgs": ["-r"],
+            "amStartArgs": [
+                "-D",
+                "--activity-brought-to-front",
+                "-a android.intent.action.MAIN",
+                "-c android.intent.category.LAUNCHER",
+                "-n com.limelight.debug/com.limelight.LandingView"
+            ],
+            "postLaunchPause": 1000,
 
-            // Custom arguments passed to the Android application manager to start the app.
-            // Run `adb shell am` to show valid arguments.
-            // Note that `-D` is required to enable debugging.
+            // Set to true to output debugging logs for diagnostics.
+            "trace": false
+        },
+        {
+            // configuration type, request  and name. "launch" is used to deploy the app
+            // to your device and start a debugging session.
+            "type": "android",
+            "request": "launch",
+            "name": "Launch (PC)",
+            "appSrcRoot": "${workspaceRoot}/app/src/main",
+            "apkFile": "${workspaceRoot}/app/build/outputs/apk/nonRoot/debug/app-nonRoot-debug.apk",
+            "autoStartADB": true,
+            "staleBuild": "warn",
+            "targetDevice": "",
+            "manifestFile": "${workspaceRoot}/app/src/main/AndroidManifest.xml",
+            "pmInstallArgs": ["-r"],
             "amStartArgs": [
                 "-D",
                 "--activity-brought-to-front",
@@ -46,13 +47,6 @@
                 "-c android.intent.category.LAUNCHER",
                 "-n com.limelight.debug/com.limelight.PcView"
             ],
-
-            // Manually specify the activity to run when the app is started. This option is
-            // mutually exclusive with "amStartArgs".
-            // "launchActivity": ".PcView",
-
-            // Time in milliseconds to wait after launching an app before attempting to attach
-            // the debugger. Default: 1000ms
             "postLaunchPause": 1000,
 
             // Set to true to output debugging logs for diagnostics.
